bundler-packages/resolutions/src/fixtures/syntaxerror/Contract.sol
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.17;

import "@openzeppelin/contracts/token/ERC721.sol"; // Missing subfolder
import "@openzeppelin//contracts/token/ERC20/ERC20.sol"; // Double slash
import '@openzeppelin/contracts/access/Ownable.sol" // Mismatched quotes
import "./../nonexistent/Contract.sol' // Mismatched quotes
import "./; // Unclosed import
import from "./SomeContract.sol"; // Syntax error

contract BrokenImports {
    function doSomething() public pure returns (string memory) {
        return "This contract has syntax errors in imports";
    }
}